--- a/rating-bar/build.gradle
+++ b/rating-bar/build.gradle
@@ -1,23 +1,18 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'pseudoankit.droid.composeratingbar'
+    namespace 'pseudoankit.droid.rating_bar'
     compileSdk 32
 
     defaultConfig {
-        applicationId "pseudoankit.droid.composeratingbar"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -39,17 +34,14 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.1.1'
     }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
 dependencies {
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation "androidx.compose.foundation:foundation:$compose_ui_version"
+    implementation "androidx.compose.foundation:foundation-layout:$compose_ui_version"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation "androidx.compose.material:material:$compose_ui_version"
-    implementation(project(":rating-bar"))
 }
+//androidx.compose.material3:material3:
+//androidx.compose.runtime:runtime
+//androidx.compose.compiler:compiler:
