--- a/rating-bar/build.gradle
+++ b/rating-bar/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation "androidx.compose.foundation:foundation-layout:$compose_ui_version"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_ui_version"
 }
 //androidx.compose.material3:material3:
 //androidx.compose.runtime:runtime
