--- a/rating-bar/build.gradle
+++ b/rating-bar/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'pseudoankit.droid.rating_bar'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -42,7 +42,5 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material-icons-core:$compose_ui_version"
+    implementation "androidx.compose.material3:material3:1.0.0-rc01"
 }
-//androidx.compose.material3:material3:
-//androidx.compose.runtime:runtime
-//androidx.compose.compiler:compiler:
