--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,22 @@ buildscript {
 
 plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            username = System.getenv("OSS_USERNAME")
+            password = System.getenv("OSS_PASSWORD")
+            stagingProfileId = System.getenv("OSS_STAGING_PROFILE_ID")
+
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
 }
